# ContextManagementSystem

./: .gitignore  CMakeLists.txt  CMakePresets.json  IConditional.h  ITask.h  README.md  Scenario.h  ScenarioStep.h  ScenarioStepEnd.h  ScenarioStepStart.h  vcpkg.json
include/: FSManager.h  FormatOutput.h  Scenario.h  ScenarioManager.h  ScenarioStep.h  SystemInfo.h  UserInterface.h  Utils.h
include/Conditional/: BatteryLevelCondition.h  IConditional.h  TimeCondition.h
include/Scenario/: Scenario.h  ScenarioManager.h  ScenarioStep.h
include/Task/: CaptureScreenTask.h  ChangePowerPlanTask.h  ITask.h  MessageBoxTask.h  ScheduleTask.h
src/: FSManager.cpp  FormatOutput.cpp  UserInterface.cpp  Utils.cpp  main.cpp
src/Conditional/: BatteryLevelCondition.cpp  TimeCondition.cpp
src/Scenario/: Scenario.cpp  ScenarioManager.cpp  ScenarioStep.cpp
src/Task/: CaptureScreenTask.cpp  ChangePowerPlanTask.cpp  MessageBoxTask.cpp  ScheduleTask.cpp
